--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -25,8 +25,13 @@
 :docname: FhatOS Documentation
 :doctitle: FhatOS: A Distributed Operating System for Embedded Systems
 
-
 = FhatOS: A Distributed Operating System for Embedded Systems (v{revnumber})
+
+++++
+<script src="https://unpkg.com/highlightjs-copy/dist/highlightjs-copy.min.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/highlightjs-copy/dist/highlightjs-copy.min.css"/>
+++++
+
 
 image:fhatos-logo.png[width=140,float=left] **FhatOS** (pronounced _fat-ahs_) is a https://en.wikipedia.org/wiki/Distributed_operating_system[distributed operating system] for https://en.wikipedia.org/wiki/ESP8266[ESP8266] and https://en.wikipedia.org/wiki/ESP32[ESP32] processors with support for sandboxed deployments on Linux and MacOSX systems.
 All FhatOS resources, from individual datum, complex structures, files, and processes exist within a single https://en.wikipedia.org/wiki/Uniform_Resource_Identifier[URI] address repeat called **furi** (pronounced "fury" or "fhat URI").
@@ -50,7 +55,8 @@ https://github.com/phaseshift-studio/fhatos[🐙 **source code**]
 ++++
 <!-- 🐖 ./boot_runner.out -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
             PhaseShift Studio Presents 
  <`--'>____  ______ __  __  ______  ______  ______  ______ 
@@ -65,7 +71,7 @@ https://github.com/phaseshift-studio/fhatos[🐙 **source code**]
       .oO loading system objs Oo.
 [INFO]  [/sys/scheduler] scheduler started
 [INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>6784]
+[INFO]  [/sys/router] main memory [total=>6912]
 [INFO]  [/sys/router] heap <none> spanning /sys/# attached
 [INFO]  [/sys/router] heap <none> spanning /mnt/# attached
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# attached
@@ -111,8 +117,8 @@ https://github.com/phaseshift-studio/fhatos[🐙 **source code**]
 [INFO]  [/io/console] thread spawned: inst()[cpp]
 [INFO]  [/sys/router] /io/console obj loaded
 [INFO]  [/sys/router] console boot config dropped
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -143,7 +149,8 @@ The FhatOS scheduler and router are accessible to the user when their respective
   [d => e]]]
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> [a => b,
          b => [c =>
@@ -154,8 +161,8 @@ fhatos> [a => b,
 ===>c=>[d=>e]
 =>]
 =>]
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -166,7 +173,8 @@ fhatos> [a => b,
 */sys/router
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> */sys/scheduler
 =>[
@@ -199,8 +207,8 @@ fhatos> */sys/router
 ===>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
 =>]
 =>]@/sys/router
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -215,7 +223,8 @@ By dereferencing the `/mmadt` root with the wildcard extension `#`, a reflective
 ++++
 <!-- 🐖 ./main_runner.out "*/mmadt/#/" -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> */mmadt/#/
 =>[
@@ -333,8 +342,8 @@ fhatos> */mmadt/#/
 ==>/mmadt/uri/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/within=>within(from(0?code,noobj)[cpp])
 =>]
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -360,7 +369,8 @@ The following subsections will provide a short overview of the aforementioned re
 */io/console
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> */io/console
 =>console[
@@ -375,8 +385,8 @@ fhatos> */io/console
 ===>stack_size=>24288
 =>]
 =>]@/io/console
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -407,7 +417,7 @@ The 7 structural types (5 mono-types and 2 poly-types) are described below.
 . `/type/rec`: An (un)ordered container of key/value pair `objs`, where keys are unique.
 
 .Controlling Base Value Bit Encoding
-****
+====
 TIP: The size of `int` and `real` in bits can be specified in the boot loader.
 ++++
 <!-- 🐖 ./main_runner.out
@@ -415,7 +425,8 @@ int[6].inspect()
 real[6.0].inspect()
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> int[6].inspect()
 =>[
@@ -443,27 +454,27 @@ fhatos> real[6.0].inspect()
 ===>encoding=>float_t
 =>]
 =>]
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
-
 
 . The `inst` `*` dereferences the `/fos/nat` fURI which points to the respective type definition.
 . The `/fos/nat` type is applied to a value by wrapping the value in `[]`.
 . The router's default `auto-prefix` configuration contains `/fos/#` and thus, the shorthand `nat` can be used.
 . If a type wraps a value that doesn't satisfy the type definition, an `error` occurs.
+====
 
 .Base Type Sugar
-****
-
+====
 TIP: Given the frequency of use of base types, specifying the type is not necessary as, given the value, the base type can be deduced.
 
 ++++
 <!-- 🐖 ./main_runner.out "/mmadt/int[6]" "int[6]" "6" -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> /mmadt/int[6]
 ==>6
@@ -471,18 +482,20 @@ fhatos> int[6]
 ==>6
 fhatos> 6
 ==>6
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
+====
 
 Examples of the aforementioned types are provided below.
 
 ++++
 <!-- 🐖 ./main_runner.out "true" "42" "-64.02567" "'the fhatty'" "mmadt://a/furi" "[-1,'fhat',[0,1]]" "[a=>1,b=>'2',c=>3.0]" -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> true
 ==>true
@@ -509,8 +522,8 @@ fhatos> [a=>1,b=>'2',c=>3.0]
 ==>b=>'2'
 ==>c=>3.000000
 =>]
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -542,7 +555,8 @@ a -> age[45]
 @a.inspect()
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> age -> \|(is(gt(0)).is(lt(120)))
 ==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj].is?noobj<=obj(lt?noobj<=obj(120)[noobj])[noobj]
@@ -556,8 +570,8 @@ fhatos> @a.inspect()
 [ERROR] [/sys/router/frame] -> [code=>'@a.inspect()']
 [ERROR] [/mmadt/bcode] 45@a is not a /mmadt/bcode as defined by [bcode][_]
 [ERROR] [/sys/router/frame] -> [code=>'@a.inspect()']
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -565,52 +579,40 @@ fhatos> @a.inspect()
 |===
 
 ++++
-<!-- 🐖 ./main_runner.out "x?sub -> |print(_)" "x -> 12" "@x.inspect()" "@x.plus(1)" "@x.plus(1).plus(1)" -->
+<!-- 🐖 ./main_runner.out "a?sub -> |print(_)" "a -> 12" "@a.inspect()" "@a.plus(1)" "@a.plus(1).plus(1)" -->
 ++++
-[source,mmadt,subs=-replacements]
-----
-fhatos> x?sub -> |print(_)
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'x?sub -> |print(_)']
-fhatos> x -> 12
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'x -> 12']
-fhatos> @x.inspect()
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'@x.inspect()']
-fhatos> @x.plus(1)
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'@x.plus(1)']
-fhatos> @x.plus(1).plus(1)
-[ERROR] [/mmadt/obj] /mmadt/mult inst unresolved 
-	         lhs id       inst id        resolve obj                                                                 
-	  ->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	 -->[/mmadt/obj ] /mmadt/mult => noobj                                                                   
-	--->[           ] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-	---->[/mmadt/mult] /mmadt/mult => mult(from(0?rhs,noobj)[cpp])
-[ERROR] [/sys/router/frame] -> [code=>'@x.plus(1).plus(1)']
 
+[source,mmadt,subs="-replacements"]
 ----
+fhatos> a?sub -> |print(_)
+==>print?noobj<=obj(_)[noobj]
+fhatos> a -> 12
+==>12
+12fhatos> @a.inspect()
+=>[
+==>type=>[
+===>id=>/mmadt/int
+===>obj=>[int][_]
+===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
+===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
+=>]
+==>value=>[
+===>id=>a
+===>obj=>12@a
+===>encoding=>int32_t
+=>]
+==>sub=>[
+===>source=>/sys/scheduler
+===>pattern=>a
+===>on_recv=>print(_)
+=>]
+=>]
+12@afhatos> @a.plus(1)
+==>13@a
+13@afhatos> @a.plus(1).plus(1)
+==>15@a
+----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -633,7 +635,8 @@ For instance, if a natural number stem:[\mathbb{N}] is any non-negative number, 
 ++++
 <!-- 🐖 ./main_runner.out "/type/int/nat -> |is(gt(0))" "nat[6]" "nat[-6]" "nat[3].plus(2)" "nat[3].mult(-2)" -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> /type/int/nat -> |is(gt(0))
 [ERROR] [/sys/router] no attached structure for /type/int/nat  
@@ -649,8 +652,8 @@ fhatos> nat[3].mult(-2)
 [ERROR] [/sys/type] -6 is not a /fos/nat as defined by nat()[is(inst()[gte(0)])]
 		thrown at inst  nat[3] => mult(-2)[cpp]
 [ERROR] [/sys/router/frame] -> [code=>'nat[3].mult(-2)']
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -686,6 +689,61 @@ The function of the router is to:
 . Manage fURI query extensions (`?` modulators).
 
 ++++
+<!-- 🐖 ./main_runner.out "/io/console/config/nest->3" "*/sys/router/#/" -->
+++++
+
+[source,mmadt,subs="-replacements"]
+----
+fhatos> /io/console/config/nest->3
+==>3
+fhatos> */sys/router/#/
+=>[
+==>/sys/router=>[
+===>structure=>[
+====>/sys/#
+====>/mnt/#
+====>/boot/#
+====>/fos/#
+====>/mmadt/#
+====>/io/#
+====>+/#
+====>/disk/#
+====>//io/#
+====>/bus/#
+==>]
+===>frame=>[rec][_]
+===>config=>[
+====>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
+==>]
+===>query=>[
+====>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
+==>]
+=>]@/sys/router
+=>]
+----
+
+++++
+<!-- 🐓 -->
+++++
+
+The router manages access to physical memory. Physical memory is partitioned by *structures*.
+The address space of a structure is the (query-less) fURI.
+Structures have an associated *pattern* fURI defining the boundaries of their storage space.
+Structures can not have overlapping address spaces.
+Every structure implements the `structure.hpp` and ultimately, is an `obj`.
+
+- There are structures that encode `objs` in physical memory (e.g. `heap`).
+- There are structures that encode `objs` on disk (e.g. `fs` -- filesystem).
+- There are structures that encode `objs` on a remote broker (e.g. `mqtt`).
+- There are structures that encode `objs` in the Bluetooth hierarchy (e.g. `bt`).
+- There are structures that encode `objs` on RFID chips (e.g. `rfid`).
+- There are structures that encode `objs` as scoped variables when evaluating code (e.g. `frame`).
+- There are structures that encode other structures (e.g. `mnt`).
+
+The aggregate of all structures accessible through the router defines the complete memory footprint of a fHaTOS instance.
+
+
+++++
 <!-- 🐖 ./main_runner.out
 a -> 'snowbutt'            --- <1>
 *a                         --- <2>
@@ -695,7 +753,8 @@ a -> 'meangirl'            --- <5>
 *b                         --- <6>
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> a -> 'snowbutt'            --- <1>
 ==>'snowbutt'
@@ -713,8 +772,8 @@ fhatos> a -> 'meangirl'            --- <5>
 ==>'meangirl'
 fhatos> *b                         --- <6>
 ==>'meangirl'
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -763,7 +822,8 @@ a/a -> 1; a/b -> 2; a/b/c -> 3; a/b/d -> 4;
 *a/#/           --- <6>
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> a/a -> 1; a/b -> 2; a/b/c -> 3; a/b/d -> 4;
 fhatos> *a/b            --- <1>
@@ -793,8 +853,8 @@ fhatos> *a/#/           --- <6>
 ==>a/b/c=>3
 ==>a/b/d=>4
 =>]
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -839,29 +899,39 @@ Other modules can be created and deployed across a fHaTOS cluster.
 IMPORTANT: The address space of a structures does not include the query parameters.
 Query parameters are used by structures to modulate the semantics of a read/write operation and are never used as the address of an `obj`.
 However, nothing prevents the `obj` at an address to be a `uri[]` with a query.
-
+Be sure to use the non-sugar'd `< >` fURI syntax when multiple values are associated with a key as the value separating
+`,` will be preferentially parsed as a `lst`, `rec`, or `inst` argument separator.
 ++++
 <!-- 🐖 ./main_runner.out
-abc -> <abc?k1=v1,v2&k2=v3&k3=v4,v5,v6>
+abc -> abc?k1=v1&k2=v2&k3=v3              --- <1>
+abc -> <abc?k1=v1,v2&k2=v3&k3=v4,v5,v6>   --- <2>
 *abc
-abc?boop=beep -> 12
+abc?boop=beep -> 12                       --- <3>
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
-fhatos> abc -> <abc?k1=v1,v2&k2=v3&k3=v4,v5,v6>
+fhatos> abc -> abc?k1=v1&k2=v2&k3=v3              --- <1>
+==>abc?k1=v1&k2=v2&k3=v3
+fhatos> abc -> <abc?k1=v1,v2&k2=v3&k3=v4,v5,v6>   --- <2>
 ==>abc?k1=v1,v2&k2=v3&k3=v4,v5,v6
 fhatos> *abc
 ==>abc?k1=v1,v2&k2=v3&k3=v4,v5,v6
-fhatos> abc?boop=beep -> 12
+fhatos> abc?boop=beep -> 12                       --- <3>
 [ERROR] router has no query processor for boop
 		thrown at inst  abc?boop=beep => ref?obj{?}<=obj{?}(12,true)[cpp]
-[ERROR] [/sys/router/frame] -> [code=>'abc?boop=beep -> 12']
-
+[ERROR] [/sys/router/frame] -> [code=>'abc?boop=beep -> 12                       --- <3>']
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
+
+<1> Sugar'd `uri` syntax can be used when no commas are present in the fURI.
+<2> Multiple values are deliminated using commas. To ensure proper parsing, multi-value query `uris[]` should be wrapped in `< >` brackets.
+<3> If no query module exists to process a key parameter, then an error is thrown.
+
 ****
 
 [source,mmadt]
@@ -882,7 +952,8 @@ a -> b
 **a
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> *a
 fhatos> *b
@@ -894,8 +965,8 @@ fhatos> *a
 ==>b
 fhatos> **a
 ==>12
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -923,7 +994,8 @@ a -> 12
 *a
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> a -> 12
 ==>12
@@ -937,8 +1009,8 @@ fhatos> @a.plus(10)
 ==>22@a
 fhatos> *a
 ==>22@a
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -959,7 +1031,8 @@ a|
 ++++
 <!-- 🐖 ./main_runner.out "a?sub -> \|to(b)" "*a?sub" "*b" "a->12" "*a" "*b" -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> a?sub -> \|to(b)
 ==>to?noobj<=obj(b)[noobj]
@@ -976,8 +1049,8 @@ fhatos> *a
 ==>12
 fhatos> *b
 ==>12
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -1032,12 +1105,13 @@ This section will explore the following considerations when designing a _multi-m
 1.plus(2)
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> 1.plus(2)
 ==>3
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -1102,7 +1176,8 @@ m/2/2 -> 10
 m/2/3 -> 11
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> m/0/0 -> 0
 ==>0
@@ -1128,8 +1203,8 @@ fhatos> m/2/2 -> 10
 ==>10
 fhatos> m/2/3 -> 11
 ==>11
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -1143,7 +1218,8 @@ m/1 -> [4,5,6,7]
 m/2 -> [8,9,10,11]
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> m/0 -> [0,1,2,3]
 =>[
@@ -1166,8 +1242,8 @@ fhatos> m/2 -> [8,9,10,11]
 ===>10
 ===>11
 =>]
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -1180,7 +1256,8 @@ m -> [<0>=>[0,1,2,3], /
       <2>=>[8,9,10,11]]
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> m -> [<0>=>[0,1,2,3],
               <1>=>[4,5,6,7],
@@ -1205,8 +1282,8 @@ fhatos> m -> [<0>=>[0,1,2,3],
 ===>11
 =>]
 =>]
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -1279,7 +1356,8 @@ M = aM
 {1,2,3}.plus(plus(_))
 -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> {1,2,3}
 ==>1
@@ -1297,8 +1375,8 @@ fhatos> {1,2,3}.plus(plus(_))
 ==>3
 ==>6
 ==>9
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -1348,7 +1426,8 @@ fhatos> {1,2,3}.plus(plus(_))
 ++++
 <!-- 🐖 ./main_runner.out "true.plus(false)" "1.plus(2)" "'a'.plus('b')" -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> true.plus(false)
 ==>true
@@ -1356,8 +1435,8 @@ fhatos> 1.plus(2)
 ==>3
 fhatos> 'a'.plus('b')
 ==>'ab'
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -1391,7 +1470,8 @@ fhatos> 'a'.plus('b')
 ++++
 <!-- 🐖 ./main_runner.out "[a=>2].match([a=>3])" "[a=>2].match([a=>_])" -->
 ++++
-[source,mmadt,subs=-replacements]
+
+[source,mmadt,subs="-replacements"]
 ----
 fhatos> [a=>2].match([a=>3])
 [ERROR] [/mmadt/rec] match inst unresolved 
@@ -1407,8 +1487,8 @@ fhatos> [a=>2].match([a=>_])
 	 -->[/mmadt/rec] match => noobj
 	--->[          ] match => noobj
 [ERROR] [/sys/router/frame] -> [code=>'[a=>2].match([a=>_])']
-
 ----
+
 ++++
 <!-- 🐓 -->
 ++++
