calling mmadt doc syntax highlighting done. looks good. now back to content.

--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -9,7 +9,7 @@
 :stem: latexmath
 :source-highlighter: highlight.js
 :highlightjsdir: ./highlight
-:highlightjs-languages: mmadt,bash,cpp
+:highlightjs-languages: mmadt
 :stylesheet: ./css/fhatos.css
 :data-uri:
 :toc-title: 🐖 FhatOS
